Most of the GUI done

--- a/index.html
+++ b/index.html
@@ -7,10 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./JS/app.js"></script>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
-
+    <div class="header">
+        <img class="logo" src="./IMAGES/4144475.png" alt="">
+        <img class="logo" src="./IMAGES/TOP.png" alt="">
+    </div>
+    <div class="sectionMain">
+        <div class="left">
+            <img class="character" src="./IMAGES/playerLeft.png" alt="">
+            <div class="bContainer">
+                <button><img class="sign" src="./IMAGES/rock.jpg" alt=""></button>
+                <button><img class="sign" src="./IMAGES/paper.png" alt=""></button>
+                <button><img class="sign" src="./IMAGES/scissor.png" alt=""></button>
+            </div>
+        </div>
+        <div class="middle">
+            <div class="mLeft"></div>
+            <div class="mRight"></div>
+        </div>
+        <div class="right">
+            <img class="character" src="./IMAGES/playerRight.png" alt="">
+            <div class="bContainer"></div>
+        </div>
+    </div>
+    <div class="sectionPoints">
+        <img class="number nP" src="./IMAGES/0.png" alt="">
+        <img class="number dash" src="./IMAGES/dash.png" alt="">
+        <img class="number nE" src="./IMAGES/0.png" alt="">
+    </div>
+    <div class="footer">
+        <footer>
+            <p>Created by Milosh Milinkov. © 2022</p>
+        </footer>
+    </div>
 </body>
 
 </html>
