--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./JS/app.js"></script>
+    <script src="./JS/app.js" defer></script>
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
@@ -19,9 +19,9 @@
         <div class="left">
             <img class="character" src="./IMAGES/playerLeft.png" alt="">
             <div class="bContainer">
-                <button><img class="sign" src="./IMAGES/rock.jpg" alt=""></button>
-                <button><img class="sign" src="./IMAGES/paper.png" alt=""></button>
-                <button><img class="sign" src="./IMAGES/scissor.png" alt=""></button>
+                <button id="rock"><img class="sign" src="./IMAGES/rock.jpg" alt=""></button>
+                <button id="paper"><img class="sign" src="./IMAGES/paper.png" alt=""></button>
+                <button id="scissor"><img class="sign" src="./IMAGES/scissor.png" alt=""></button>
             </div>
         </div>
         <div class="middle">
@@ -42,6 +42,12 @@
         <footer>
             <p>Created by Milosh Milinkov. © 2022</p>
         </footer>
+    </div>
+    <div id="endContainer">
+        <div class="endDiv">
+            <p class="endMessage"></p>
+            <button class="restartBtn">RESTART</button>
+        </div>
     </div>
 </body>
 
